
DEFAULT_INCLUDES = -I$(top_builddir)/src -I$(top_srcdir)/src

lib_LIBRARIES = ivf.lib

ivf_lib_SOURCES = \
	IvfBasic.h \
	IvfApp.cpp IvfApp.h \
	IvfArchiveInput.cpp IvfArchiveInput.h \
	IvfArchiveOutput.cpp IvfArchiveOutput.h \
	IvfAsyncFile.cpp IvfAsyncFile.h \
	IvfComponent.cpp IvfComponent.h \
	IvfDocument.cpp IvfDocument.h \
	IvfExaminerViewer.cpp Viewers/IvfExaminerViewer.h \
	IvfFlyViewer.cpp Viewers/IvfFlyViewer.h \
	IvfMainFrm.cpp IvfMainFrm.h \
	IvfPlaneViewer.cpp Viewers/IvfPlaneViewer.h \
	IvfRenderArea.cpp Viewers/IvfRenderArea.h \
	IvfResource.cpp IvfResource.h \
	IvfSceneViewer.cpp Viewers/IvfSceneViewer.h \
	IvfSrvrItem.cpp IvfSrvrItem.h \
	IvfStdViewer.cpp Viewers/IvfStdViewer.h \
	IvfWalkViewer.cpp Viewers/IvfWalkViewer.h

ivfincdir = $(includedir)/Ivf
ivfinc_HEADERS = \
	IvfBasic.h \
	IvfApp.h \
	IvfArchiveInput.h \
	IvfArchiveOutput.h \
	IvfComponent.h \
	IvfDocument.h \
	IvfMainFrm.h \
	IvfResource.h \
	IvfSrvrItem.h

ivfviewersincdir = $(includedir)/Ivf/Viewers
ivfviewersinc_HEADERS = \
	Viewers/IvfExaminerViewer.h \
	Viewers/IvfFlyViewer.h \
	Viewers/IvfPlaneViewer.h \
	Viewers/IvfRenderArea.h \
	Viewers/IvfSceneViewer.h \
	Viewers/IvfStdViewer.h \
	Viewers/IvfWalkViewer.h

